--- a/_config.yml
+++ b/_config.yml
@@ -32,17 +32,17 @@ color_theme: dark                                       # auto, dark or light
 
 # Comments options
 comments:
-  disqus_shortname: copyrat90-devlog                    # Your discus shortname for comments
+  disqus_shortname:                                     # Your discus shortname for comments
   cusdis_app_id:                                        # Your cusdis data-app-id
   utterances:                                           # Enable by filling below information. For more info, go to https://utteranc.es
     repo:                                               # your public comments repository (e.g. owner/repo)
     issue-term:                                         # Issue term (e.g. "comment" consider issues with this word in the title as comments)
   giscus:                                               # Enable by filling below information. For more info, go to https://giscus.app
-    repo:                                               # Your public comments repository (e.g. owner/repo)
-    repo-id:                                            # Your repo id, go to https://giscus.app to check it
-    category:                                           # Category to search discussions. When removed, discussions will be searched in all categories.
-    category-id:                                        # Your category id, go to https://giscus.app to check it
-    mapping:                                            # Discussion mapping
+    repo: copyrat90/copyrat90.github.io                 # Your public comments repository (e.g. owner/repo)
+    repo-id: MDEwOlJlcG9zaXRvcnkzOTMyMTYzMDQ=           # Your repo id, go to https://giscus.app to check it
+    category: Announcements                             # Category to search discussions. When removed, discussions will be searched in all categories.
+    category-id: DIC_kwDOF3ABMM4CmPP-                   # Your category id, go to https://giscus.app to check it
+    mapping: pathname                                   # Discussion mapping
 
 # PAGINATION
 paginate: 5
