--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ avatar: assets/img/rat_avatar.png                      # Empty for no avatar in 
 favicon: assets/img/rat_avatar.png                     # Icon displayed in the tab
 
 # Header and footer text
-header_text: <code>copyrat90::devlog::articles</code>  # Change Blog header text
+header_text: <code>copyrat90::devlog</code>  # Change Blog header text
 header_feature_image: assets/img/header/triangular.jpeg
 header_feature_image_responsive: true
 footer_text: >
